--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,16 @@ font-family: 'Jaldi', sans-serif;
 font-family: 'JetBrains Mono', monospace;
 */
 
+body{
+    justify-content: center;
+}
 header{
     background: rgb(102,122,105);
     background: linear-gradient(180deg, rgba(102,122,105,1) 0%, rgba(199,218,202,1) 50%, rgba(102,122,105,1) 100%);
 }
 header h1{
     margin-top: 0px;
-    padding:20px;
+    padding:15px;
     font-family: 'Inknut Antiqua', serif;
     font-size: 70px;
     text-align: center;
@@ -27,8 +30,8 @@ header h1{
     }
 
 #banner{
-    width: 1100px;
-    height: 25px;
+    max-width: 1100px;
+    max-height: 25px;
     justify-content: center;
     text-align: center;
     color:white;
