--- a/learningjournal/styles.css
+++ b/learningjournal/styles.css
@@ -38,18 +38,29 @@ body{
 main{
     padding:30px 0px 30px 0px;
     gap:25px;
+    justify-items: center;
 }
 
-main article{
+article {
     font-family: 'Jaldi', sans-serif;
-    padding:0px;
-    margin:25px;
+    margin: 0;
+    padding: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    max-width:550px;
+    line-height: 2em;
 }
+
 main article h2{
     font-family: 'JetBrains Mono', monospace;
-    font-size: 25px;
+    font-size: 30px;
 }
-
+main article p{
+    font-family: 'Jaldi', sans-serif;
+    font-size: 20px;
+    justify-content: center;
+}
 main article a{
     text-decoration: none;
     font-family: 'Jaldi', sans-serif;
