--- a/studio2final/styles.css
+++ b/studio2final/styles.css
@@ -8,12 +8,14 @@ body {
 }
 
 img{
-    width:200px;
+    display: block;
+    width:600px;
     height:auto;
     border-radius: 10px;
     filter: grayscale(85%);
     transition: all 0.3s ease;
 }
+/*
 article {
     box-sizing: border-box;
     width: 500px;
@@ -24,7 +26,7 @@ article {
     margin-bottom: 30px;
     opacity: 0;
     transition: 1s;
-}
+} */
 
 .show {
     opacity: 1; 
@@ -36,50 +38,140 @@ article p {
     margin-bottom: 0;
 }
 
-section {
-    height: 450px;
-    overflow-y: scroll;
+main {
     background-color: rgb(153, 216, 227);
-    padding: 70px;
+    height: 700px;
+    padding: 0;
 }
 
 img:hover {
     filter: grayscale(0%);
   }
 
-  article:hover {
-    transform:scale(1.25);
-    
-  }
-/* article {
-    padding: 15px;
-    display: flex;
+
+  /* added for final*/
+
+:root {
+  --sliderwidth: ;
 }
 
-img{
-    width: 17%;
-    height: auto;
-    border-radius: 10px;
-    filter: grayscale(85%);
-  transition: all 0.3s ease;
+@keyframes moveSlider {
+  from { left: 0; }
+  to { left: var(--sliderwidth) }
+}
+.animate {
+  animation-name: moveSlider;
+  animation-duration: 60s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
 
-h2 {
-    text-align: left;
-    opacity: 0;
-  }
-  p {
-    text-align: left;
-    opacity: 0;
-  }
-img:hover {
-    filter: grayscale(0%);
-    scale:135%;
-  }
-  article h2:hover {
-    position: absolute;
-    bottom: 18%;
-  }
-  article p:hover {
-    opacity: 1;
-  }  */
+article img { 
+  display: block;
+  width:200px;
+  height:auto;
+  border-radius: 10px;
+}
+
+/* I added this for the section */
+#one {
+  width: 100%;
+  overflow-x: hidden;
+  height: 75%;
+  position: relative;
+  /*add something here to give space on top of section: margins or padding?*/
+}
+
+
+/* to make it go right, just change the left property to right */
+.slider {
+  display: flex;
+  position: absolute;
+  top:20;
+  left: 0; /* this is the only change! */
+  bottom:20;
+  height: 100%;
+  /* transition: all 60s linear; */
+}
+
+.sliderpaused {
+  display: flex;
+  position: absolute;
+  top:0;
+  /*right: 0;  this is the only change! */
+  height: 200px;
+}
+
+.slider div img {
+  height: 100%;
+
+  display: block;
+  margin-right: 20px;
+}
+
+.a, .b {
+ display: flex;
+ height: 100%;
+}
+
+/* Overlay styling */
+
+.hidden {
+  visibility: hidden;
+  opacity: 0;
+}
+
+.showing {
+  visibility: showing;
+  opacity: 1;
+}
+
+.overlay {
+  position: absolute;
+  background-color: rgba(0,0,0,0.5);
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  transition-property: visibility, opacity;
+  transition-duration: 1s;
+  transition-timing-function: ease;
+  display: grid;
+  place-content:center;
+}
+
+.overlay article {
+  box-sizing: border-box;
+  width: 500px;
+  border: 4px solid #ebdb72;
+  padding: 15px;
+  background-color: white;
+  border-radius: 10px;
+  margin-bottom: 30px;
+  opacity: 0;
+  transition: 1s;
+
+  display: flex;
+  align-items: flex-start;
+  gap: 20px;
+  position: relative;
+  box-shadow: 0px 0px 20px 0px #000000;   
+}
+
+.overlay article img, .overlay article div {
+  width: 50%;
+}
+
+.corner {
+  font-size: 36px;
+  margin: 0;
+  padding: 0;
+  border:none;
+  background-color: transparent;
+  color:tomato;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  outline: none;
+}
